prom-temp1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: temp1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: temp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus1
  template:
    metadata:
      labels:
        app: prometheus1
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus
        
        ports:
        - containerPort: 9090
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: temp1
spec:
  selector:
    app: prometheus1
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
